...
                        }
                        .padding(.horizontal)
                    }
                }
            }
            HStack {
                TextField("Type a message", text: $viewModel.newMessage)
                    .textFieldStyle(RoundedBorderTextFieldStyle())
                    .padding()
                Button(action: {
                    viewModel.sendMessage()
                }) {
                    Text("Send")
                }
                .padding()
            }
        }
        .padding(.top)
    }
...
